fix: fix pinned covers

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -48,7 +48,7 @@ a {
 
   :not(pre) > code {
     padding: 0.2em 0.35em;
-    margin: 0;
+    margin: 0 2px;
     background-color: rgb(var(--color-gray-100));
     border-radius: 3px;
   }
